# tonal

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  stats.json
conf/base/: catalog.yml  parameters_model_creation.yml
data/01_raw/: tonal_exams.csv
data/02_intermediate/: preprocessed_data.csv
data/05_model_input/: test_data_X.csv  test_data_Y.csv  training_data_X.csv  training_data_Y.csv
data/06_models/: model_trained.pkl
mlruns/0/: meta.yaml
mlruns/0/014de30d3b514ad191f8baa6e5188811/: meta.yaml
mlruns/0/08975a98bfa34d519176d98dbd92523f/: meta.yaml
mlruns/0/124d200e183b49a09b877e56a00e9e54/: meta.yaml
mlruns/0/15a2910d16f847ffa073f6f705e72c62/: meta.yaml
mlruns/0/286edd88f73a4ae388ddccf13fab5e3c/: meta.yaml
mlruns/0/2a25e8a73cff4713b46ffe174b2424a3/: meta.yaml
mlruns/0/36f0f7484cbe4ba199ccc5c36211ee68/: meta.yaml
mlruns/0/40ff036cf8d948cd86b60ac982bc82c8/: meta.yaml
mlruns/0/54da88db20b64d8c806f5f7accf34353/: meta.yaml
mlruns/0/580249f49a3448269886cf3837a0b7ff/: meta.yaml
mlruns/0/589419ee3193436a97c55c080152841c/: meta.yaml
mlruns/0/5bf7a80da0fe4acea377fe188499a40e/: meta.yaml
mlruns/0/5d36314a8b9142acb196f1245b03687e/: meta.yaml
mlruns/0/5fde0b2ddf6c4d728236c0ac303851a8/: meta.yaml
src/tests/: test_data_quality.py  test_model_evaluation.py  test_preprocessing.py
src/tonal_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
templates/: aggregate.html  index.html  results.html  upload_aggregate.html  upload_predict.html
tests/: test_model_evaluation.py  test_preprocessing.py
(+381 files in other folders)
