[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "tonal_project"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
tonal-project = "tonal_project.__main__:main"

[tool.kedro]
package_name = "tonal_project"
project_name = "tonal_project"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "tonal_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
